Bug 1237097 - Don't invalidate opacity:0 nsDisplayOpacity items. r=tnikkel